items renamed to itemsList
